--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ configparser==5.0.1
 crayons==0.4.0
 Flask==2.0.1
 greenlet==0.4.17
+gunicorn==20.1.0
 idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
