--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,10 @@ jobs:
           registry: nonamesec.jfrog.io/noname-docker-release
           username: devops@nonamesecurity.com
           password: ${{ secrets.ACTIVE_REGISTRY_PASSWORD }}
-
-      - name: setup node
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14"
-          cache: "npm"
           
       - uses: actions/setup-python@v3
         with:
-          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          python-version: '3.8' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
           
       - name: Install python dependencies
