--- a/app-spec.json
+++ b/app-spec.json
@@ -1,55 +1,37 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "title": "Business Calculation API",
     "description": "Specification for example Python REST API",
     "version": "1.0"
   },
+  "servers": [{"url": "http://localhost:5000" }],
   "paths": {
     "/calculate": {
       "post": {
         "operationId": "Calculate Value",
-        "parameters": [
-          {
-            "x-amf-mediaType": "application/json",
-            "in": "body",
-            "name": "generated",
-            "schema": {
-              "example": [
-                1,
-                2,
-                3,
-                4
-              ],
-              "type": "array",
-              "items": {
-                "type": "number"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "example": [1, 2, 3, 4]
               }
             }
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "",
-            "x-amf-mediaType": "application/json",
-            "schema": {
-              "$ref": "#/definitions/CalculationResult"
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": { "calculatedResult": 6 }
+                }
+              }
             }
           }
-        }
-      }
-    }
-  },
-  "definitions": {
-    "CalculationResult": {
-      "type": "object",
-      "additionalProperties": true,
-      "required": [
-        "calculatedValue"
-      ],
-      "properties": {
-        "calculatedValue": {
-          "type": "number"
         }
       }
     }
