--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,15 +28,11 @@ jobs:
       - name: Startup API
         run: python app.py &
 
-
       - name: security test
         run: |
-          docker run \
-          --pull always \
-          nonamesec.jfrog.io/noname-docker-release/active-cli \
-          scan \
-          --api-url="https://active.nonamesec.com/active/api/graphql" \
-          --api-token=${{ secrets.ACTIVE_API_TOKEN }} \
-          --test-suite-id="51413ffa-1902-4096-a0c0-77d5a8625cfb" \
-          --severity-threshold="medium" \
-          --base-url http://localhost:5000
+          docker run --network host nonamesec.jfrog.io/noname-docker-release/active-cli scan \
+            --api-url=https://active.nonamesec.com/active/api/graphql \
+            --api-token=${{ secrets.ACTIVE_API_TOKEN }} \
+            --test-suite-id=51413ffa-1902-4096-a0c0-77d5a8625cfb \
+            --severity-threshold=medium \
+            --base-url http://localhost:5000
